<resources>
    <string name="app_name">MinhaProva</string>
    <string name="button1">R.id.button1</string>
    <string name="button2">R.id.button2</string>
    <string name="button3">R.id.button3</string>
    <string name="button4">R.id.button4</string>
    <string name="text1">R.id.text1</string>
    <string name="text2">R.id.text2</string>
    <string name="buttonOk">Ok</string>
    <string name="buttonCancel">Cancelar</string>
    <string name="welcome">Bem-vindo</string>
    <string name="erro1">Nao pode ser vazio</string>
    <string name="textviewName">Titulo</string>
    <string name="textviewYear">Ano</string>
    <string name="textviewAuthor">Autor</string>
    <string name="textviewRate">Nota</string>
    <string name="prev">Anterior</string>
    <string name="next">Proximo</string>

</resources>