<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityAcao2">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/textviewName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/textviewAuthor"
            app:layout_constraintStart_toStartOf="@+id/textViewName"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/textviewYear"
            app:layout_constraintStart_toStartOf="@+id/textViewAuthor"
            app:layout_constraintTop_toBottomOf="@+id/textViewAuthor" />

        <TextView
            android:id="@+id/textViewRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/textviewRate"
            app:layout_constraintStart_toStartOf="@+id/textViewYear"
            app:layout_constraintTop_toBottomOf="@+id/textViewYear" />


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/textViewName"
            app:layout_constraintStart_toEndOf="@+id/textViewName"
            app:layout_constraintTop_toTopOf="@+id/textViewName" />

        <EditText
            android:id="@+id/editTextAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/textViewAuthor"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            app:layout_constraintTop_toTopOf="@+id/textViewAuthor" />

        <EditText
            android:id="@+id/editTextAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/textViewYear"
            app:layout_constraintStart_toStartOf="@+id/editTextAuthor"
            app:layout_constraintTop_toTopOf="@+id/textViewYear" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/buttonOk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRate" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/buttonCancel"
            app:layout_constraintBottom_toBottomOf="@+id/buttonOk"
            app:layout_constraintStart_toEndOf="@+id/buttonOk"
            app:layout_constraintTop_toTopOf="@+id/buttonOk" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="240dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewRate"
            app:layout_constraintStart_toEndOf="@+id/textViewRate"
            app:layout_constraintTop_toTopOf="@+id/textViewRate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>